--- a/client/src/styles/ColorBox.module.css
+++ b/client/src/styles/ColorBox.module.css
@@ -31,7 +31,6 @@
   width: 100%;
   height: 80%;
   background: none;
-  outline: none;
   text-align: center;
   text-transform: lowercase;
   text-decoration: none;
@@ -40,6 +39,10 @@
   color: rgba(255, 255, 255, 1);
   border: none;
   opacity: 0;
+}
+
+.copyButton:focus {
+  opacity: 1;
 }
 
 .darkText {
